<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_runtime_fs</name>
  <version>0.1.0</version>
  <description>A FUSE filesystem that exposes a ROS2 network of nodes as a hierarchy of directories and symlinks</description>
  <author email="m@gozhev.org">Mikhail Gozhev</author>
  <maintainer email="m@gozhev.org">Mikhail Gozhev</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>composition_interfaces</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
